@@ -1,0 +1,15 @@
+#
+# $Id$
+#
+
+project.source:         1.5
+
+compile.debug:          true
+compile.deprecation:    false
+compile.optimize:       false
+
+esb.compress:           false
+esb.index:              true
+
+jar.compress:           false
+jar.index:              true
