@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+    $Id$
+-->
+<jbossesb-deployment>
+    <depends>jboss.esb:deployment=jbossesb.esb</depends>
+</jbossesb-deployment>
